--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="text-red-600">
+
     <div><!--content wrapper-->
         <div>
             <nav>
                 <div>
                     <h1>
-                        <a href="/000">Food Ninja</a>
+                        <a href="/000">Baoob Ninja</a>
                     </h1>
                 </div>
                 <ul>
@@ -68,7 +69,7 @@
                 </div>
 
                 <div>
-                    <div>Load more</div>
+                    <div class="text-red-700">Load more</div>
                 </div>
             </div>
         </main>
