--- a/public/index.html
+++ b/public/index.html
@@ -6,24 +6,24 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="text-red-600">
+<body class="text-gray-600">
 
     <div><!--content wrapper-->
         <div>
             <nav>
                 <div>
-                    <h1>
-                        <a href="/000">Baoob Ninja</a>
+                    <h1 class="font-bold uppercase">
+                        <a href="/000">Boob Ninja</a>
                     </h1>
                 </div>
                 <ul>
-                    <li>
+                    <li class="text-gray-700 font-bold">
                         <a href="/">
                             <span>Home</span>
                         </a>
                     </li>
                     <li>
-                        <a href="/">
+                        <a href="/">  
                             <span>About</span>
                         </a>
                     </li>
@@ -43,12 +43,12 @@
             </div>
 
             <header>
-                <h2>Recipes</h2>
-                <h3>for ninjas</h3>
+                <h2 class="text-gray-700 text-5xl font-semibold">Recipes</h2>
+                <h3 class="text-2xl font-semibold">for ninjas</h3>
             </header>
 
             <div>
-                <h4>Latest Recipes</h4>
+                <h4 class="font-bold hover:font-thin">Latest Recipes</h4>
 
                 <div>
                     <!--cards go here-->
@@ -62,7 +62,7 @@
                     
                 </div>
 
-                <h4>Most popular</h4>
+                <h4 class="font-bold">Most popular</h4>
                 
                 <div>
                     <!--cards go here-->
