--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <div>
             <nav>
                 <div>
-                    <h1 class="font-bold uppercase">
+                    <h1 class="font-bold uppercase p-4 border-b border-gray-100">
                         <a href="/000">Boob Ninja</a>
                     </h1>
                 </div>
@@ -36,7 +36,7 @@
             </nav>
         </div><!--End Nav-->
 
-        <main>
+        <main class="p-16">
             <div>
                 <a href="">Log in</a>
                 <a href="">Sign up</a>
@@ -48,9 +48,9 @@
             </header>
 
             <div>
-                <h4 class="font-bold hover:font-thin">Latest Recipes</h4>
+                <h4 class="font-bold hover:font-thin mt-12 pb-2 border-b boarder-gray-200">Latest Recipes</h4>
 
-                <div>
+                <div class="mt-8">
                     <!--cards go here-->
                     <div>
                         <img src="img/banga.Jpeg" alt="">
@@ -62,9 +62,9 @@
                     
                 </div>
 
-                <h4 class="font-bold">Most popular</h4>
+                <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Most popular</h4>
                 
-                <div>
+                <div class="mt-8">
                     <!--cards go here-->
                 </div>
 
