--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="text-gray-600">
+<body class="text-gray-600 font-body">
 
     <div><!--content wrapper-->
         <div>
@@ -37,9 +37,9 @@
         </div><!--End Nav-->
 
         <main class="p-16">
-            <div>
+            <div class='flex justify-center md:justify-end'>
                 <a href="">Log in</a>
-                <a href="">Sign up</a>
+                <a href="" class="ml-2">Sign up</a>
             </div>
 
             <header>
@@ -68,8 +68,8 @@
                     <!--cards go here-->
                 </div>
 
-                <div>
-                    <div class="text-red-700">Load more</div>
+                <div class="flex justify-center">
+                    <div class="text-yellow-700 bg-gray-300 p-2">Load more</div>
                 </div>
             </div>
         </main>
