Done: a flex card and time badge.

--- a/public/index.html
+++ b/public/index.html
@@ -52,11 +52,14 @@
 
                 <div class="mt-8">
                     <!--cards go here-->
-                    <div>
-                        <img src="img/banga.Jpeg" alt="">
-                        <div>
-                            <span>5 Bean Chilli stew</span>
-                            <span>Recipe by Mario</span>
+                    <div class="bg-white rounded overflow-hidden shadow-md relative">
+                        <img src="img/banga.Jpeg" alt="" class="w-full h-32 sm:h-48 object-cover">
+                        <div class="m-4">
+                            <span class="font-bold">5 Bean Chilli stew</span>
+                            <span class="block text-sm text-gray-400">Recipe by Mario</span>
+                        </div>
+                        <div class="bg-gray-100 text-xs rounded-full p-1 absolute top-0 m-2">
+                            25 mins
                         </div>
                     </div>
                     
