Done: applied directives for Card & Badge Also Duplicated Cards and edited text

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             <nav>
                 <div>
                     <h1 class="font-bold uppercase p-4 border-b border-gray-100">
-                        <a href="/000">Boob Ninja</a>
+                        <a href="/000">Food Ninja</a>
                     </h1>
                 </div>
                 <ul>
@@ -44,7 +44,7 @@
 
             <header>
                 <h2 class="text-gray-700 text-5xl font-semibold">Recipes</h2>
-                <h3 class="text-2xl font-semibold">for ninjas</h3>
+                <h3 class="text-2xl font-semibold">for Students(or people in a hurry)</h3>
             </header>
 
             <div>
@@ -52,13 +52,33 @@
 
                 <div class="mt-8">
                     <!--cards go here-->
-                    <div class="bg-white rounded overflow-hidden shadow-md relative">
+                    <div class="card">
                         <img src="img/banga.Jpeg" alt="" class="w-full h-32 sm:h-48 object-cover">
                         <div class="m-4">
-                            <span class="font-bold">5 Bean Chilli stew</span>
-                            <span class="block text-sm text-gray-400">Recipe by Mario</span>
+                            <span class="font-bold"> Flash Banga Soup</span>
+                            <span class="block text-sm text-gray-400">Recipe by Tee</span>
                         </div>
-                        <div class="bg-gray-100 text-xs rounded-full p-1 absolute top-0 m-2">
+                        <div class="badge">
+                            25 mins
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="img/okra.png" alt="" class="w-full h-32 sm:h-48 object-cover">
+                        <div class="m-4">
+                            <span class="font-bold">Protein Intense Okra</span>
+                            <span class="block text-sm text-gray-400">Recipe by Tee</span>
+                        </div>
+                        <div class="badge">
+                            25 mins
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="img/egusi.JPG" alt="" class="w-full h-32 sm:h-48 object-cover">
+                        <div class="m-4">
+                            <span class="font-bold">Egusi</span>
+                            <span class="block text-sm text-gray-400">Recipe From Africa</span>
+                        </div>
+                        <div class="badge">
                             25 mins
                         </div>
                     </div>
