--- a/public/index.html
+++ b/public/index.html
@@ -8,38 +8,41 @@
 </head>
 <body class="text-gray-600 font-body">
 
-    <div><!--content wrapper-->
-        <div>
-            <nav>
+    <div class="grid md:grid-cols-3"><!--content wrapper-->
+        <div class="md:col-span-1 flex justify-end">
+            <nav class="text-right">
                 <div>
                     <h1 class="font-bold uppercase p-4 border-b border-gray-100">
-                        <a href="/000">Food Ninja</a>
+                        <a href="/000" class="hover:text-gray-900">Food Ninja</a>
                     </h1>
                 </div>
-                <ul>
-                    <li class="text-gray-700 font-bold">
+                <ul class=''>
+                    <li class="text-gray-700">
                         <a href="/">
-                            <span>Home</span>
+                            <span >Home</span>
+                            <svg class="ml-2 w-4 h-4 inline-block" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
                         </a>
                     </li>
                     <li>
-                        <a href="/">  
+                        <a href="/" class="">  
                             <span>About</span>
+                            <svg class="ml-2  w-4 h-4 inline-block" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
                         </a>
                     </li>
                     <li>
                         <a href="/">
                             <span>Contact</span>
+                            <svg class="ml-2 w-4 h-4  inline-block" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path></svg>
                         </a>
                     </li>
                 </ul>
             </nav>
         </div><!--End Nav-->
 
-        <main class="p-16">
+        <main class="p-16 md:col-span-2">
             <div class='flex justify-center md:justify-end'>
-                <a href="">Log in</a>
-                <a href="" class="ml-2">Sign up</a>
+                <a href="" class="  btn border-green-500 text-green-500 md:border-2 hover:bg-green-500 hover:text-white">Log in</a>
+                <a href="" class="  ml-2 btn border-green-500 text-green-500 md:border-2 hover:bg-green-500 hover:text-white">Sign up</a>
             </div>
 
             <header>
@@ -50,25 +53,28 @@
             <div>
                 <h4 class="font-bold hover:font-thin mt-12 pb-2 border-b boarder-gray-200">Latest Recipes</h4>
 
-                <div class="mt-8">
+                <div class="mt-8 grid md:grid-cols-3 gap-10 ">
                     <!--cards go here-->
-                    <div class="card">
+                    <div class="card ">
                         <img src="img/banga.Jpeg" alt="" class="w-full h-32 sm:h-48 object-cover">
                         <div class="m-4">
                             <span class="font-bold"> Flash Banga Soup</span>
-                            <span class="block text-sm text-gray-400">Recipe by Tee</span>
+                            <span class="block  text-sm text-gray-400">Recipe by Tee</span>
                         </div>
+                        
                         <div class="badge">
+                            <svg class="w-3 h-3 inline-block" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
                             25 mins
                         </div>
                     </div>
                     <div class="card">
                         <img src="img/okra.png" alt="" class="w-full h-32 sm:h-48 object-cover">
                         <div class="m-4">
-                            <span class="font-bold">Protein Intense Okra</span>
+                            <span class="font-bold ">Protein Intense Okra</span>
                             <span class="block text-sm text-gray-400">Recipe by Tee</span>
                         </div>
                         <div class="badge">
+                            <svg class="w-3 h-3 inline-block" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
                             25 mins
                         </div>
                     </div>
@@ -79,6 +85,7 @@
                             <span class="block text-sm text-gray-400">Recipe From Africa</span>
                         </div>
                         <div class="badge">
+                            <svg class="w-3 h-3 inline-block" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
                             25 mins
                         </div>
                     </div>
@@ -92,7 +99,7 @@
                 </div>
 
                 <div class="flex justify-center">
-                    <div class="text-yellow-700 bg-gray-300 p-2">Load more</div>
+                    <div class="btn hover:bg-green-500 hover:text-white">Load more</div>
                 </div>
             </div>
         </main>
