--- a/public/index.html
+++ b/public/index.html
@@ -5,32 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    
 </head>
-<body class="text-gray-600 font-body">
+<body class="text-gray-600 font-body ">
 
     <div class="grid md:grid-cols-3"><!--content wrapper-->
-        <div class="md:col-span-1 flex justify-end">
+        <div class="md:col-span-1 md:flex md:justify-end ">
             <nav class="text-right">
-                <div>
+                <div class="flex justify-between">
                     <h1 class="font-bold uppercase p-4 border-b border-gray-100">
-                        <a href="/000" class="hover:text-gray-900">Food Ninja</a>
+                        <a href="/000" class="hover:text-gray-900">Foodie</a>
                     </h1>
+                    <div class="p-4 cursor-pointer md:hidden" id="burger">
+                        <svg class="w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7"></path></svg>
+                    </div>
                 </div>
-                <ul class=''>
-                    <li class="text-gray-700">
-                        <a href="/">
+                <ul class='py-4 hidden md:block' id="menu">
+                    <li class="text-gray-700 border-r-4 border-red-400 px-3">
+                        <a href="/" class="">
                             <span >Home</span>
                             <svg class="ml-2 w-4 h-4 inline-block" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
                         </a>
                     </li>
-                    <li>
-                        <a href="/" class="">  
+                    <li class="px-3 border-r-4 border-white">
+                        <a href="/" >  
                             <span>About</span>
                             <svg class="ml-2  w-4 h-4 inline-block" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
                         </a>
                     </li>
-                    <li>
-                        <a href="/">
+                    <li class='px-3 border-r-4 border-white'>
+                        <a href="/" class="">
                             <span>Contact</span>
                             <svg class="ml-2 w-4 h-4  inline-block" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path></svg>
                         </a>
@@ -39,10 +43,10 @@
             </nav>
         </div><!--End Nav-->
 
-        <main class="p-16 md:col-span-2">
+        <main class="p-16 md:col-span-2 bg-gray-100">
             <div class='flex justify-center md:justify-end'>
-                <a href="" class="  btn border-green-500 text-green-500 md:border-2 hover:bg-green-500 hover:text-white">Log in</a>
-                <a href="" class="  ml-2 btn border-green-500 text-green-500 md:border-2 hover:bg-green-500 hover:text-white">Sign up</a>
+                <a href="" class=" transition duration-200 btn border-green-500 text-green-500 md:border-2 hover:bg-green-500 hover:text-white">Log in</a>
+                <a href="" class=" transition duration-200 ml-2 btn border-green-500 text-green-500 md:border-2 hover:bg-green-500 hover:text-white">Sign up</a>
             </div>
 
             <header>
@@ -104,5 +108,8 @@
             </div>
         </main>
     </div>
+
+    <script src="index.js"></script> 
 </body>
 </html>
+
