Transitions and finishing touches

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
 
         <main class="p-16 md:col-span-2 bg-gray-100">
             <div class='flex justify-center md:justify-end'>
-                <a href="" class=" transition duration-200 btn border-green-500 text-green-500 md:border-2 hover:bg-green-500 hover:text-white">Log in</a>
-                <a href="" class=" transition duration-200 ml-2 btn border-green-500 text-green-500 md:border-2 hover:bg-green-500 hover:text-white">Sign up</a>
+                <a href="" class=" transition ease-out duration-500 btn border-green-500 text-green-500 md:border-2 hover:bg-green-500 hover:text-white">Log in</a>
+                <a href="" class=" transition ease-out duration-500 ml-2 btn border-green-500 text-green-500 md:border-2 hover:bg-green-500 hover:text-white">Sign up</a>
             </div>
 
             <header>
@@ -103,7 +103,7 @@
                 </div>
 
                 <div class="flex justify-center">
-                    <div class="btn hover:bg-green-500 hover:text-white">Load more</div>
+                    <div class="btn hover:bg-green-200 transition ease-out duration-300 transform hover:scale-125">Load more</div>
                 </div>
             </div>
         </main>
